@@ -1,3 +1,10 @@
+Wed Jan  3 16:26:52 MET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* tc-i386.h (CpuK6, CpuAthlon, CpuSledgehammer, CpuMMX, Cpu3dnow,
+	CpuUnknown): Renumber
+	(CpuP4, CpuSSE2): New.
+	(CpuUnknownFlags): Add CpuP4 and CpuSSE2
+
 2001-01-03  Philip Blundell  <pb@futuretv.com>
 
 	* config/tc-alpha.c (alpha_force_relocation): Handle vtable
